--- a/client/package.json
+++ b/client/package.json
@@ -12,6 +12,7 @@
     "apollo-boost": "^0.4.9",
     "apollo-cache-inmemory": "^1.6.6",
     "apollo-client": "^2.6.10",
+    "apollo-link-context": "^1.0.20",
     "apollo-link-http": "^1.5.17",
     "formik": "^2.1.4",
     "graphql": "^15.1.0",
